[build-system]
requires = ["setuptools>=42", "calver"]
build-backend = "setuptools.build_meta"

[project]
name = "rcapptests"
authors = [
    {name = "Sohaib Syed", email = "sohaibuddinsyed@ufl.edu"},
    {name = "Oleksandr Moskalenko", email = "moskalenko@ufl.edu"},
]
description = "RC Application Testing Tools"
readme = "README.md"
keywords = ["rc", "apps", "tests"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Customer Service",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
  "build >= 1.2.1",
  "calver >= 2022.6.26",
  "colorama >= 0.4.6",
  "loguru >= 0.7.2",
  "markdown-it-py >= 3.0.0",
  "mdurl >= 0.1.2",
  "packaging >= 24.1",
  "pygments >= 2.17.2",
  "pyproject-hooks >= 1.1.0",
  "pyyaml >= 6.0.1",
  "rich >= 13.7.1",
  "tomli >= 2.0.1",
  "tqdm >= 4.66.4",
  "typing_extensions >= 4.10.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://www.rc.ufl.edu"
"Documentation" = "https://github.com/UFResearchComputing/rcapptests/docs"
"Issues" = "https://github.com/UFResearchComputing/rcapptests/issues"
"Repository" = "https://github.com/UFResearchComputing/rcapptests"

[tool.setuptools.packages.find]
where = ["src"]
